perf: more efficient data storage structure
Signed-off-by: Francois Bojarski <francois.bojarski@consensys.net>